--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,12 @@
 <footer class="footer">
   <small>
-    The School Business App
+    The School Business App is developed by 
+    <a href="http://http://www.ceti.cse.ohio-state.edu/">CETI</a> 
+    at the <a href="http://www.osu.edu/">Ohio State University</a>.
   </small>
   <nav>
     <ul>
-      <li><%= link_to 'About',   about_path %></li>
+      <li><%= link_to 'About',  about_path %></li>
       <li><%= link_to 'Contact', contact_path %></li>
     </ul>
   </nav>
