--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,36 +1,52 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container">
+<nav>
+  <div class="container-fluid">
     <%= link_to 'School Business', root_path, id: 'logo' %>
-    <nav>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed"
+              data-toggle="collapse" data-target="#header-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      
+        
+    </div>
+    <div class="collapse navbar-collapse" id="header-collapse">
       <ul class="nav navbar-nav pull-right">
         <li><%= link_to 'Home', root_path %></li>
         <li><%= link_to 'Help', help_path %></li>
+
         <% if user_signed_in? %>
             <li><%= link_to 'Users', users_path %></li>
             <li><%= link_to 'Events', events_path %></li>
             <li><%= link_to 'Search by Location', locations_path %></li>
             <li><%= link_to 'Claims', claims_path %></li>
             <li id="fat-menu" class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                Account <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li><%= link_to 'Profile', current_user %></li>
-                <li><%= link_to 'Edit', edit_user_registration_path %></li>
-                <% if current_user.Admin? %>
-                    <li><%= link_to 'Admin', '/admin' %></li>
-                    <li><%= link_to 'Users', users_path %></li>
-                <% end %>
-                <li class="divider"></li>
-                <li>
-                  <%= link_to 'Log out', destroy_user_session_path, :method => :delete %>
-                </li>
-              </ul>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= user.name %><b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+            <li><%= link_to 'Profile', current_user %></li>
+            <li><%= link_to 'Edit', edit_user_registration_path %></li>
+            <% if current_user.Admin? %>
+              <li><%= link_to 'Admin', '/admin' %></li>
+              <li><%= link_to 'Users', users_path %></li>
+            <% end %>
+            <li class="divider"></li>
+            <li>
+              <%= link_to 'Log out', destroy_user_session_path, :method => :delete %>
             </li>
+          </ul>
         <% else %>
-            <li><%= link_to 'Log in', new_user_session_path %></li>
+          <li><%= link_to 'Log in', new_user_session_path %></li>
         <% end %>
       </ul>
-    </nav>
+    </div>
+        </li>
+      </span>
+      </ul>
   </div>
+</nav>
 </header>
