--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,15 +15,15 @@
     </div>
 <% else %>
     <div class="center jumbotron">
-      <h1>Welcome to School Business</h1>
+      <h1>Welcome to the School Business App</h1>
 
       <h2>
-        This is the home page for the School Business application.
+        Developed by CETI at the Ohio State University.
       </h2>
 
       <%= link_to 'Sign up now!', new_user_registration_path, class: 'btn btn-lg btn-primary' %>
     </div>
 
-    <%= link_to image_tag('rails.png', alt: 'Rails logo'),
-                          'http://rubyonrails.org/' %>
+   <!-- <%= link_to image_tag('rails.png', alt: 'Rails logo'),
+                          'http://rubyonrails.org/' %> -->
 <% end %>
