--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,6 +17,7 @@
 
 <div id="facets">
   <ul>
+    <!-- TODO REPLACE FUNCTIONALITY
     <% @search.facet(:event_month).rows.each do |facet| %>
         <li>
           <% if params[:month].blank? %>
@@ -26,6 +27,7 @@
           <% end %>
         </li>
     <% end %>
+  -->
   </ul>
 </div>
 
