--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,6 +2,6 @@
 <h1>About</h1>
 <p>
   The School-Business system is designed to be a service for educators, businesses and community
-  members that enables educators to easily find knowledgeable persons who are willing to speak to
+  members to enables educators to easily find knowledgeable persons who are willing to speak to
   classes of students.
 </p>
