--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -4,7 +4,7 @@
   <p><strong>Title: </strong>
     <%= link_to event.title, event %></p>
   <p><%= event.content %></p>
-  <p> <strong>Location: </strong> <%= link_to School.find(event.user.school_id).name, School.find(event.user.school_id).location %> </p>
+  <p> <strong>Location: </strong> <%= link_to School.find(event.user.school_id).school_name, School.find(event.user.school_id).location %> </p>
   <p>Posted <%= time_ago_in_words(event.created_at) %> ago.</p>
   <p><strong>Tags: </strong>
     <%= raw event.tags.map(&:name).map { |t| link_to t, tag_path(t) }.join(', ') %></p>
