--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,10 +19,17 @@
         <li><%= link_to 'Help', help_path %></li>
 
         <% if user_signed_in? %>
-            <li><%= link_to 'Users', users_path %></li>
+          <% @loglinks = {'Users'              => users_path, 
+                          'Events'             => events_path,
+                          'Search by Location' => locations_path,
+                          'Claims'             => claims_path} %>
+          <% @loglinks.each do |title, lpath| %>
+            <li><%= link_to title, lpath %></li>
+          <% end %>
+<!--             <li><%= link_to 'Users', users_path %></li>
             <li><%= link_to 'Events', events_path %></li>
             <li><%= link_to 'Search by Location', locations_path %></li>
-            <li><%= link_to 'Claims', claims_path %></li>
+            <li><%= link_to 'Claims', claims_path %></li> -->
             <li id="fat-menu" class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= user.name %><b class="caret"></b>
