--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -19,3 +19,16 @@
 	<% end %>
 	<li><%= link_to 'Back', schools_path %></il>
 </ul>
+
+ </aside>
+  <div class="col-md-8">
+  	<% get_events(@school.id) %>
+    <% if @events.any? %>
+        <h3>Events (<%= @events.count %>)</h3>
+        <ol class="events">
+          <%= render @events %>
+        </ol>
+        <%= will_paginate @events %>
+    <% end %>
+  </div>
+</div>
