--- a/app/views/schools/_school.html.erb
+++ b/app/views/schools/_school.html.erb
@@ -1,3 +1,3 @@
 <li>
-  <%= link_to handle_abbr(school.school_name.titlecase), school %>
+  <%= link_to handle_abbr(school.school_name), school %>
 </li>
