--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,24 +5,30 @@
       <h3 align="center">
         <%= @user.name %>
       </h3>
-      <% @user_fields = { 'Email' => @user.email,
-                          'Role'  => @user.role,
+      <% @user_fields = { 'Role'  => @user.role,
                           'Biography' => @user.biography } %>
-      <% @teacher_fields = {'School' => School.find(@user.school_id).school_name,
-                            'Grades' => @user.grades } %>
+      <% if (@user.role == "Teacher" || @user.role == "Both") 
+        @teacher_fields = {'School' => School.find(@user.school_id).school_name,
+                            'Grades' => @user.grades } end %>
       <% @business_fields = {'Job Title' => @user.job_title,
                              'Business' => @user.business } %>
                              
       <% if @user.role == "Speaker" then @user_fields = @user_fields.merge @business_fields end %>
       <% if @user.role == "Teacher" then @user_fields = @user_fields.merge @teacher_fields end %>
-      <% if @user.role == 3 then @user_fields = (@user_fields.merge @business_fields).merge @teacher_fields end %>
+      <% if @user.role == "Both" then @user_fields = (@user_fields.merge @business_fields).merge @teacher_fields end %>
       
       <% @user_fields.each do |key, value| %>
         <h4>
           <strong><%= key %>: </strong> <%= value %>
         </h4>
       <% end %>
-
+      
+      <% if (current_user == @user) %>
+        <div>
+        <%= button_to "Edit", "profile", :method => :get  %>
+        </div>
+      <% end %>
+    
     </section>
   </aside>
   <div class="col-md-8">
