--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 /* mixins, variables, etc. */
 
 $gray-medium-light: #eaeaea;
