--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -4,6 +4,9 @@
       <%= f.label :title, 'Title' %><br />
       <%= f.text_field :title %>
     </div>
+    <div class="field"> 
+      <%= f.hidden_field :school_id, value: current_user.school_id %>
+    </div>
 
     <div class="field">
       <%= f.text_area :content, placeholder: 'Compose new event...' %>
