--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,6 +20,9 @@ html {
 body {
   padding-top: 60px;
 }
+@media screen and (max-width: 768px){
+  body {padding-top: 100px;}
+}
 
 section {
   overflow: auto;
