--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -9,7 +9,7 @@
 
           <div class="form-group">
             <div class='input-group date' id='datetimepicker9'>
-              <input type='datetime' name='start' class="form-control" />
+              <input type='datetime' name='event_start' class="form-control" />
                     <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
                     </span>
             </div>
