--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,8 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header class="navbar navbar-fixed-top navbar-inverse" role="navigation">
 <nav>
   <div class="container-fluid">
     <%= link_to 'School Business', root_path, id: 'logo' %>
+
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed"
               data-toggle="collapse" data-target="#header-collapse">
@@ -10,9 +11,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      
-        
     </div>
+
     <div class="collapse navbar-collapse" id="header-collapse">
       <ul class="nav navbar-nav pull-right">
         <li><%= link_to 'Home', root_path %></li>
@@ -20,22 +20,19 @@
 
         <% if user_signed_in? %>
           <% @loglinks = {'Users'              => users_path, 
-                          'Events'             => events_path,
-                          'Search by Location' => locations_path,
-                          'Claims'             => claims_path} %>
+                          'Events'             => events_path }%>
+                          <!-- 'Search by Location' => locations_path,
+                          'Claims'             => claims_path} 
+                          %> -->
           <% @loglinks.each do |title, lpath| %>
             <li><%= link_to title, lpath %></li>
           <% end %>
-<!--             <li><%= link_to 'Users', users_path %></li>
-            <li><%= link_to 'Events', events_path %></li>
-            <li><%= link_to 'Search by Location', locations_path %></li>
-            <li><%= link_to 'Claims', claims_path %></li> -->
-            <li id="fat-menu" class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <%= gravatar_for(user,  20) %>
-              <%= user.name %><b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
+          <li id="fat-menu" class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <%= gravatar_for(user,  20) %>
+            <%= user.name %><b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
             <li><%= link_to 'Profile', current_user %></li>
             <li><%= link_to 'Account', edit_user_registration_path %></li>
             <% if current_user.Admin? %>
@@ -52,9 +49,17 @@
         <% end %>
       </ul>
     </div>
-        </li>
-      </span>
-      </ul>
   </div>
 </nav>
+<% puts "FUCK"+params[:controller] %>
+<% if controller_name == 'events' %>
+<div class="container-fluid breadcrumb-wrapper">
+  <ol class="breadcrumb" role="navigation">
+    <li class="active">Events</li>
+    <li><a href="#">Search By Location</a></li>
+    <li><a href="#">Claims</a></li>
+    <!-- <li class="active">Data</li> -->
+  </ol>
+</div>
+<% end %>
 </header>
