--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -22,14 +22,19 @@
 <div class="btn-group" style="text-align:center">
 	<% if user_signed_in? && 
 		(current_user == 'Teacher' || current_user.role == 'Both') %>
-		<%= button_to 'Make My School', {:controller => "schools", :action => "make_mine", :user_id => current_user.id, :school_id => @school.id}, :method => :post, :class => "btn btn-lg btn-primary pull-left" %>
+		<%= button_to 'Make My School', claim_school_path(:user_id => current_user.id, :school_id => @school.id), 
+				method: :post, 
+				data: {confirm: "Confirm: Make \"#{handle_abbr(@school.school_name)}\" your school?"},
+				class: "btn btn-lg btn-primary" %>
 	<% end %>
-	<%= button_to "Back to Search", {:controller => "schools", :action => "index"}, :method => :get, :class => "btn btn-lg btn-primary pull-right" %>
+	<%= button_to "Back to Search", {:controller => "schools", :action => "index"}, :method => :get, :class => "btn btn-lg btn-primary" %>
 </div>
 
  </aside>
   <div class="col-md-8">
-  	<% get_events(@school.id) %>
+  	<% puts @school.class %>
+  	<% @events = get_events2(@school) %>
+  	<% puts @events %>
     <% if @events.any? %>
         <h3>Events (<%= @events.count %>)</h3>
         <ol class="events">
