--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -55,7 +55,7 @@
 <% if controller_name == 'events' %>
 <div class="container-fluid breadcrumb-wrapper">
   <ol class="breadcrumb" role="navigation">
-    <li class="active">Events</li>
+    <li class="active label">Events</li>
     <li><a href="#">Search By Location</a></li>
     <li><a href="#">Claims</a></li>
     <!-- <li class="active">Data</li> -->
