Remove near_me function for the time being

--- a/app/views/schools/choose.html.erb
+++ b/app/views/schools/choose.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Find My School') %>
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Schools</h1>
+<h1>Find My School</h1>
 
 <%= form_tag schools_path, :method => :get do %>
   <p>
