--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,3 +1,3 @@
 <h1><%= current_user.name %></h1>
-<span><%= link_to 'view my profile', current_user %></span>
-<span><%= pluralize(current_user.events.count, 'event') %></span>
+<p class="text-center"><%= link_to 'View My Profile', current_user %></p>
+<p class="text-center"><%= pluralize(current_user.events.count, 'event') %></p>
