--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -22,7 +22,7 @@
 <div class="btn-group" style="text-align:center">
 	<% if user_signed_in? && 
 		(current_user == 'Teacher' || current_user.role == 'Both') %>
-		<% if current_user.school_id > 1 %>
+		<% if current_user.school_id == 1 %>
 			<%= button_to 'Make My School', claim_school_path(:user_id => current_user.id, :school_id => @school.id), 
 					method: :post, 
 					data: {confirm: "Confirm: Make \"#{handle_abbr(@school.school_name)}\" your school?"},
