--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -39,25 +39,24 @@
 <div id="events">
   <% @events.each do |event| %>
       <h2><%= link_to event.title, event %></h2>
-      <%= simple_format event.content %>
 
       <p> <strong>Location: </strong> 
         <%= link_to handle_abbr(School.find(event.user.school_id).school_name.titlecase), 
             School.find(event.user.school_id) %> 
       </p>
-      <p> <strong>Teacher: </strong> 
+      <p> <strong>Organizer: </strong> 
         <%= link_to event.user.name, event.user %> 
       </p>
 
       <p>
         <% unless event.claims.each.nil? %>
-                <strong>Claimed by: </strong>
+                <strong>Speaker: </strong>
                 <%= raw event.claims.each.map(&:user).map {|u| link_to u.name, user_path(u)  }.join(', ') %>
         <% end %>
       </p>
 
       <p><strong>Tags: </strong><%= raw event.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %></p>
-
+      <p><strong>Time: </strong><%= present_time(event.event_start, event.event_end) %></p>
       <p>
         <% if event.claims.where('confirmed_by_teacher = ?', true).count < 1 &&
                 event.claims.where('user_id = ?', current_user.id).count < 1 &&
