--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,7 @@
+<% if params[:tab] then tab = params[:tab] else tab = "tab_all" end %>
 <% if user_signed_in? %>
   <div class="row">
+
       <!-- <aside class="col-md-4"> -->
         <section class="user_info">
           <%= render 'shared/user_info' %>
@@ -19,7 +21,7 @@
       <div class="row">
       <div class="col-md-8">
         <h3>Event Feed</h3>
-        <%= render 'shared/feed' %>
+        <%= render "events/#{tab}" %>
       </div>
     </div>
     </div>
