Update and fix Devise Sessions and Registrations controller to allow api calls to each to successfully manage user profile and account settings

--- a/app/views/user_mailer/password_changed.html.erb
+++ b/app/views/user_mailer/password_changed.html.erb
@@ -3,7 +3,7 @@
 <p>
   Hi <%= @user.name %>,</p>
 <p>
-	We wanted to let you know that your password was changed.   If this was done wtihout your knowledge, please contact us at <%= ENV["SENDGRID_USERNAME"] %>.
+	We wanted to let you know that your password was changed.   If this was done without your knowledge, please contact us at <%= ENV["SENDGRID_USERNAME"] %>.
 </p>
 <p>Thanks! </p>
 <p>School Business Team</p>
