--- a/app/views/registrations/profile.html.erb
+++ b/app/views/registrations/profile.html.erb
@@ -3,7 +3,7 @@
 <div class="container-fluid">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= simple_form_for(resource, as: resource_name, url: user_path(resource_name), html: { method: :put }) do |f| %>
             <%= devise_error_messages! %>
 
             
