--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -22,15 +22,14 @@
 <div class="btn-group" style="text-align:center">
 	<% if user_signed_in? && 
 		(current_user == 'Teacher' || current_user.role == 'Both') %>
-		<% if current_user.school_id == 1 %>
+<!-- 		 if current_user.school_id == 1 %> -->
 			<%= button_to 'Make My School', claim_school_path(:user_id => current_user.id, :school_id => @school.id), 
 					method: :post, 
 					data: {confirm: "Confirm: Make \"#{handle_abbr(@school.school_name)}\" your school?"},
 					class: "btn btn-lg btn-primary" %>
-		<% else %>
-			<%= button_to 'Find My School', :choose,
-				method: :get, class: "btn-lg btn-primary" %>
-		<% end %>
+			<!--button_to# 'Find My School', :choose,
+				#method: :get, class: "btn-lg btn-primary" %>
+		#end %>-->
 	<% end %>
 	<%= button_to "Back to Search", {:controller => "schools", :action => "index"}, :method => :get, :class => "btn btn-lg btn-primary" %>
 </div>
