--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -5,7 +5,7 @@
       <%= f.text_field :title %>
     </div>
     <div class="field"> 
-      <%= f.hidden_field :school_id, value: current_user.school_id %>
+      <%= f.hidden_field :loc_id, value: current_user.school_id %>
     </div>
 
     <div class="field">
