--- a/app/views/shared/_event_form.html.erb
+++ b/app/views/shared/_event_form.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class="field"> 
       <%= puts current_user.school_id %>
-      <%= f.hidden_field :school_id, :value => current_user.school_id %>
+      <%= f.hidden_field :loc_id, :value => current_user.school_id %>
     </div>
     <div class="field">
       <%= f.text_area :content, placeholder: 'Compose new event...' %>
