Update welcome email to not use current_user but to pass in a user_id instead

--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,7 +1,7 @@
 <h1>Welcome to the School Business App!</h1>
 
 <p>
-  Hi <%= current_user.name %>,</p>
+  Hi <%= User.find(@id).name %>,</p>
 <p>
 	We're very happy to have you using our app, a product that is the collaboration of the Delphos School District and the Ohio State University.  If you did not sign up for this app, please contact us at schoolbusinessapp@gmail.com.  
 
