--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -4,10 +4,11 @@
   Hi <%= User.find(@id).name %>,</p>
 <p>
 	We're very happy to have you using our app, a product that is the collaboration of the Delphos School District and the Ohio State University.  If you did not sign up for this app, please contact us at schoolbusinessapp@gmail.com.  
+</p>
 
-	CONTENT
-
+<p>
 	Please contact us if you have any questions!
 </p>
 <p>Thanks! </p>
+<p>David Campbell</p>
 <p>School Business Team</p>
