Prevent double clicks on events

--- a/app/views/shared/_event_form.html.erb
+++ b/app/views/shared/_event_form.html.erb
@@ -2,29 +2,29 @@
 
     <div class="field">
       <%= f.label :title, 'Title' %><br />
-      <%= f.text_field :title %>
+      <%= f.text_field :title, value: @event.title %>
     </div>
     <div class="field"> 
       <%= puts current_user.school_id %>
       <%= f.hidden_field :loc_id, :value => current_user.school_id %>
     </div>
     <div class="field">
-      <%= f.text_area :content, placeholder: 'Compose new event...' %>
+      <%= f.text_area :content, value: @event.content, placeholder: 'Compose new event...' %>
     </div>
 
     <div class="field">
       <%= f.label :tag_list, 'Tags (separated by commas)' %><br />
-      <%= f.text_field :tag_list %>
+      <%= f.text_field :tag_list, value: @event.tag_list %>
     </div>
     <div class="form-group">
       <label>Start</label>
-      <%= f.datetime_select :event_start %>
+      <%= f.datetime_select :event_start, value: strftime(@event.event_start) %>
     </div>
     <div class="form-group">
       <label>End</label>
-      <%= f.datetime_select :event_end %>
+      <%= f.datetime_select :event_end, value: @event.event_end %>
     </div>
-    <%= f.submit 'Post', class: 'btn btn-primary' %>
+    <%= f.submit 'Post', :data => {:disable_with => "Saving..."}, class: 'btn btn-primary' %>
 <% end %>
 
 <script type="text/javascript">
