--- a/app/views/shared/_event_form.html.erb
+++ b/app/views/shared/_event_form.html.erb
@@ -16,13 +16,15 @@
       <%= f.label :tag_list, 'Tags (separated by commas)' %><br />
       <%= f.text_field :tag_list, value: @event.tag_list %>
     </div>
+    <% if @event.event_start then start_value = strftime(@event.event_start) else value = Time.now end %>
+    <% if @event.event_end then end_value = strftime(@event.event_end) else value = Time.now end %>
     <div class="form-group">
       <label>Start</label>
-      <%= f.datetime_select :event_start, value: strftime(@event.event_start) %>
+      <%= f.datetime_select :event_start, value: start_value %>
     </div>
     <div class="form-group">
       <label>End</label>
-      <%= f.datetime_select :event_end, value: @event.event_end %>
+      <%= f.datetime_select :event_end, value: end_value %>
     </div>
     <%= f.submit 'Post', :data => {:disable_with => "Saving..."}, class: 'btn btn-primary' %>
 <% end %>
