--- a/app/views/shared/_event_form.html.erb
+++ b/app/views/shared/_event_form.html.erb
@@ -16,8 +16,8 @@
       <%= f.label :tag_list, 'Tags (separated by commas)' %><br />
       <%= f.text_field :tag_list, value: @event.tag_list %>
     </div>
-    <% if @event.event_start then start_value = strftime(@event.event_start) else value = Time.now end %>
-    <% if @event.event_end then end_value = strftime(@event.event_end) else value = Time.now end %>
+    <% if @event.event_start then start_value = @event.event_start else value = Time.now end %>
+    <% if @event.event_end then end_value = @event.event_end else value = Time.now end %>
     <div class="form-group">
       <label>Start</label>
       <%= f.datetime_select :event_start, value: start_value %>
