--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -66,7 +66,7 @@
   <a>
   <% if current_user == event.user %>
     <%= button_to 'Edit the Event', {action: "edit", controller: "events", id:event.id}, method: :get, class: "btn-primary" %>
-    <%= button_to 'Cancel The Event', event, data: { confirm: 'Are you sure?' }, method: :delete, class: 'btn btn-primary btn-xs' %>
+    <%= button_to 'Cancel The Event', {action: "cancel", controller: "events", id: event.id}, data: { confirm: 'Are you sure?' }, method: :delete, class: 'btn btn-primary btn-xs' %>
   <% else %>
     <%= button_to 'Message The Organizer', {action: "write_message", controller: "users", id: event.user_id}, method: :get, class:"btn-primary" %>    
   <% end %>
