--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -12,7 +12,7 @@
   </aside>
 <div class="col-xs-6 col-md-6">
 <p><strong>Location: </strong> 
-    <%= link_to handle_abbr(School.find(event.loc_id).school_name.titlecase), "/schools/#{event.user.school_id}" %> </p>
+    <%= link_to handle_abbr(School.find(event.loc_id).school_name.titlecase), "/schools/#{event.loc_id}" %> </p>
   <p><strong>Time:</strong> <%= present_time(event.event_start, event.event_end)  %></p>
 </div>
   <div class="col-xs-6 col-md-6">
