--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -7,9 +7,9 @@
 			</h3>
 <p id="notice"><%= notice %></p>
 
-<% puts Badge.find(1).file.url %>
+<%= puts Badge.find(1).url %>
 <div align="center">
-<%= image_tag Badge.find(@school.badge_id).file.url :class =>"img-responsive"  %>
+<%= image_tag Badge.find(@school.badge_id).url  %>
 </div>
 
 <% @fields.each do |key, value| %>
